[gd_scene load_steps=5 format=2]

[ext_resource path="res://stream/stream.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 5 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 40, 100 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 100 )

[node name="Stream" type="Node2D"]
script = ExtResource( 1 )

[node name="begin" type="Position2D" parent="."]
position = Vector2( 0, -100 )
__meta__ = {
"_gizmo_extents_": 60.0
}

[node name="BoxDetector" type="RayCast2D" parent="begin"]
enabled = true
cast_to = Vector2( 0, 200 )
collision_mask = 2

[node name="end" type="Position2D" parent="."]
position = Vector2( 0, 100 )

[node name="StaticBody2D" type="StaticBody2D" parent="end"]
position = Vector2( 0, -100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="end/StaticBody2D"]
position = Vector2( 0, 95 )
rotation = 3.14159
shape = SubResource( 1 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="walkthroughPrevention" type="StaticBody2D" parent="."]
scale = Vector2( 0.64, 1 )
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="walkthroughPrevention"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
